--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
 
 <body>
 
-    <div class="top">
-        <h1>Lazara Michelle</h1>
-
-        <div class="nav">
+    <div id="topnav">
+        <div id="nav">
             <a href="index.html">Home</a>
 
             <a href="myjobs.html">My Jobs</a>
 
             <a href="about.html">About Me</a>
         </div>
-
+        <h1>Lazara Michelle</h1>
     </div>
 
     <div class="content">
@@ -40,16 +38,14 @@
         </div>
         <div class="rightcontent">
             <form class="form" method="post" action="http://fvi-grad.com:4004/email">
-                <label for="dest-email"> Send To</label>
                 <input type="text" name="dest-email" placeholder="Send to...">
-                <label for="full-name">Full Name</label>
                 <input type="text" name="full-name" placeholder="Full Name">
-                <input type="text" name="phone"  placeholder="Phone Number">
-                <input type="text" name="date"  placeholder="Delivery Date">
+                <input type="text" name="phone" placeholder="Phone Number">
+                <input type="text" name="date" placeholder="Delivery Date">
                 <input type="text" name="time" placeholder="Time">
                 <input type="text" name="email" placeholder="Email">
                 <input type="text" name="subject" placeholder="Subject">
-                <textarea name="message" cols="30" rows="30">Enter Message Here</textarea>
+                <textarea name="message" cols="30" rows="10" placeholder="Enter Message Here"></textarea>
                 <input type="submit" value="Submit">
             </form>
         </div>
